--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "postinstall": "npm run install-client && npm run install-server && npm run build-client",
     "server": "nodemon ./bin/www",
     "client": "cd client && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+
   },
   "engines": {
     "npm": "6.11.3",
