--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:5000/",
   "private": true,
   "dependencies": {
+    "brace": "^0.11.1",
     "jquery": "^3.4.1",
     "react": "^16.11.0",
     "react-ace": "^8.0.0",
