--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.0",
     "firebase-admin": "^8.6.1",
     "http": "0.0.0",
+    "https": "^1.0.0",
     "morgan": "~1.9.0",
     "socket.io": "^2.3.0",
     "uuid": "^3.3.3"
